--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "teste:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage",
     "prepare": "husky"
   },
   "engines": {
